Add in integration tests

--- a/tox.ini
+++ b/tox.ini
@@ -17,6 +17,5 @@ usedevelop = True
    
 
 [pytest]
-#addopts = --doctest-modules butter tests tests/unit
-addopts = tests/unit
+addopts = tests/unit tests/intergration
 norecursedirs = venv env .tox __pycache__
